# k-means_clustering_parallel

./: README.md
Parallel/: CMakeLists.txt  kernel.cu  utils.cpp  utils.h
Sequential/: CMakeLists.txt  k_mean_clustering_sequencial.cpp
